--- a/index.html
+++ b/index.html
@@ -1,46 +1,348 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block Ninja</title>
-    <link rel="stylesheet" href="style.css"> </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AB Studio | Powerful & Elegant</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Arial', sans-serif;
+      background: #000;
+      color: white;
+      overflow-x: hidden;
+      height: 100vh;
+      background: linear-gradient(to bottom, #1a2a6c, #b21f1f, #fdbb2d);
+      position: relative;
+    }
+
+    .star {
+      position: absolute;
+      width: 3px;
+      height: 3px;
+      background-color: white;
+      animation: starAnim 1.5s infinite;
+    }
+
+    @keyframes starAnim {
+      0% {
+        transform: translateY(0) scale(1);
+      }
+      50% {
+        transform: translateY(100vh) scale(1.5);
+      }
+      100% {
+        transform: translateY(0) scale(1);
+      }
+    }
+
+    header {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 1rem 2rem;
+      text-align: center;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 1.5rem;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #fdbb2d;
+    }
+
+    .hero {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 3rem;
+      background-blend-mode: overlay;
+      position: relative;
+      z-index: 1;
+    }
+
+    .hero h1 {
+      font-size: 4rem;
+      line-height: 1.5;
+      text-transform: uppercase;
+    }
+
+    .hero p {
+      margin-top: 1rem;
+      font-size: 1.5rem;
+    }
+
+    .hero button {
+      background: #fdbb2d;
+      border: none;
+      padding: 1rem 2rem;
+      margin-top: 2rem;
+      color: black;
+      font-size: 1.2rem;
+      cursor: pointer;
+      transition: background 0.3s;
+      border-radius: 8px;
+    }
+
+    .hero button:hover {
+      background: #ffb900;
+    }
+
+    #about {
+      display: none;
+      padding: 3rem 2rem;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.1);
+      margin-top: 2rem;
+      border-radius: 10px;
+    }
+
+    #about.show {
+      display: block;
+    }
+
+    #services {
+      padding: 3rem 2rem;
+      text-align: center;
+    }
+
+    .card-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+    }
+
+    .card {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 2rem;
+      border-radius: 12px;
+      text-align: center;
+      transition: transform 0.3s, box-shadow 0.3s;
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.8));
+      position: relative;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    .card img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 1rem;
+    }
+
+    .card h2 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+    }
+
+    .card a {
+      color: #fdbb2d;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.2rem;
+      transition: color 0.3s;
+    }
+
+    .card a:hover {
+      color: #ffb900;
+    }
+
+    .contact-section {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 5rem 2rem;
+      background: rgba(0, 0, 0, 0.7);
+      margin-top: 5rem;
+      border-radius: 12px;
+      backdrop-filter: blur(10px);
+    }
+
+    .contact-form-container {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 3rem;
+      border-radius: 12px;
+      max-width: 600px;
+      width: 100%;
+      text-align: center;
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
+    }
+
+    .contact-form-container h2 {
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      color: #fdbb2d;
+    }
+
+    .contact-form input, .contact-form textarea {
+      width: 100%;
+      padding: 1rem;
+      margin: 1rem 0;
+      border: 2px solid #fdbb2d;
+      border-radius: 8px;
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
+      font-size: 1.1rem;
+    }
+
+    .contact-form button {
+      background: #fdbb2d;
+      border: none;
+      padding: 1rem 3rem;
+      margin-top: 1rem;
+      color: black;
+      font-size: 1.1rem;
+      cursor: pointer;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+
+    .contact-form button:hover {
+      background: #ffb900;
+    }
+
+    footer {
+      background: #111;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+      margin-top: 3rem;
+    }
+
+    .scroll-link {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #fdbb2d;
+      padding: 0.7rem 1.2rem;
+      text-transform: uppercase;
+      border: none;
+      border-radius: 50%;
+      font-weight: bold;
+      cursor: pointer;
+    }
+  </style>
+</head>
 <body>
-    <canvas id="c"></canvas>
+  <!-- Star Animations -->
+  <div class="star" style="top: 30%; left: 10%;"></div>
+  <div class="star" style="top: 50%; left: 30%;"></div>
+  <div class="star" style="top: 70%; left: 50%;"></div>
+  <div class="star" style="top: 20%; left: 70%;"></div>
+  <div class="star" style="top: 90%; left: 90%;"></div>
 
-    <div class="hud">
-        <div class="hud__score">
-            <div class="score-lbl">Score: 0</div>
-            <div class="cube-count-lbl">Cubes: 0</div>
-        </div>
-        <div class="pause-btn"><div></div><div></div></div>
-        <div class="slowmo">
-            <div class="slowmo__bar"></div>
-        </div>
+  <header>
+    <nav>
+      <a href="#" onclick="showAbout()">AB Studio</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div>
+      <h1>Welcome to AB Studio</h1>
+      <p>Crafting Powerful & Elegant Experiences</p>
     </div>
+  </section>
 
-    <div class="menus">
-        <div class="menu menu--main">
-            <h1>Block Ninja</h1>
-            <button type="button" class="play-normal-btn">PLAY GAME</button>
-            <button type="button" class="play-casual-btn">CASUAL MODE</button>
-            <div class="credits">An 8kB game by <a href="https://codepen.io/FRADAR">FRADAR</a></div>
-        </div>
-        <div class="menu menu--pause">
-            <h1>Paused</h1>
-            <button type="button" class="resume-btn">RESUME GAME</button>
-            <button type="button" class="menu-btn--pause">MAIN MENU</button>
-        </div>
-        <div class="menu menu--score">
-            <h1>Game Over</h1>
-            <h2>Your Score:</h2>
-            <div class="final-score-lbl">0</div>
-            <div class="high-score-lbl">0</div>
-            <button type="button" class="play-again-btn">PLAY AGAIN</button>
-            <button type="button" class="menu-btn--score">MAIN MENU</button>
-        </div>
+  <!-- About Section -->
+  <section id="about" class="about">
+    <h2>AB Studio - A Bast Company</h2>
+    <p>Your journey to success begins with us. At AB Studio, we create beautiful, modern, and functional digital experiences.</p>
+  </section>
+
+  <!-- Services Section -->
+  <section id="services">
+    <h2>Our Services</h2>
+    <div class="card-container">
+      <div class="card">
+        <img src="https://via.placeholder.com/300x200" alt="Web Development">
+        <h2>Web Development</h2>
+        <p>Responsive and sleek websites for your business.</p>
+        <a href="https://example.com" target="_blank">Learn More</a>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x200" alt="Branding & Design">
+        <h2>Branding & Design</h2>
+        <p>Building your brand with powerful and modern designs.</p>
+        <a href="https://example.com" target="_blank">Learn More</a>
+      </div>
+      <div class="card">
+        <img src="https://i.postimg.cc/50zT2VZj/qr-code-1.png" alt="SEO Optimization">
+        <h2>AB QR Code Genaerat</h2>
+        <p>free unlimited QR code generat</p>
+        <a href="https://abqrcode.netlify.app/" target="_blank">Learn More</a>
+      </div>
     </div>
+  </section>
 
-    <script src="script.js"></script>
+  <!-- Contact Section -->
+  <section id="contact" class="contact-section">
+    <div class="contact-form-container">
+      <h2>Contact Us</h2>
+      <p>We would love to hear from you. Please send us a message.</p>
+      <div class="contact-form">
+        <input type="text" id="name" placeholder="Your Name" required>
+        <input type="email" id="email" placeholder="Your Email" required>
+        <textarea id="message" placeholder="Your Message" rows="4" required></textarea>
+        <button type="submit" onclick="sendMessage()">Send Message</button>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 AB Studio. All Rights Reserved.</p>
+  </footer>
+
+  <button class="scroll-link" onclick="scrollToTop()">↑</button>
+
+  <script>
+    function showAbout() {
+      document.getElementById('about').classList.toggle('show');
+    }
+
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+
+    function sendMessage() {
+      const name = document.getElementById('name').value;
+      const email = document.getElementById('email').value;
+      const message = document.getElementById('message').value;
+
+      if (name && email && message) {
+        const mailtoLink = `mailto:abcoiseo@gmail.com?subject=Message from ${name}&body=Name: ${name}%0AEmail: ${email}%0AMessage: ${message}`;
+        window.location.href = mailtoLink;
+      } else {
+        alert("Please fill in all fields.");
+      }
+    }
+  </script>
 </body>
 </html>
